# PHGv2Tools

./: CHANGELOG.md  README.md  phgtools.py  pyproject.toml  setup.py
Example_database/: README.md  imputation_match_results.tsv
Example_database/data/: Col0.fa  Col0.fa.fai  Col0.gff  GCA_036942445.1.fa  GCA_036942575.1.fa  GCA_036942965.1.fa  assemblies_keyfile.txt
Example_database/data/imputation_rawdata/: Ler0.fa.fai
Example_database/data/prepared_assemblies/: Bla-1.fa  Bla-1.fa.fai  Col-0.fa  Col-0.fa.fai  Cvi-0.fa  Ita-0.fa  assemblies_list.txt
Example_database/data/prepared_genomes/: LineA.fa.fai  LineC.fa.fai  Ref.fa.fai
Example_database/output/: distance_matrix.tsv  distance_matrix_count.tsv  example_pangenome.g.vcf  example_pangenome.h.vcf  hapIDrange.tsv  hapIDranges.tsv  hapIDsample.tsv
Example_database/output/alignment_files/: Bla-1.maf  Bla-1.proali.anchors  Bla-1.sam  Col-0.sam  Cvi-0.maf  Cvi-0.proali.anchors  Cvi-0.sam  Ita-0.maf  Ita-0.proali.anchors  Ita-0.sam  assemblies_align_keyfile.txt  ref.cds.fasta
Example_database/output/haplopainting/: Bla-1.h.bed  Bla-1.h.vcf  (+8 more)
Example_database/vcf_dbs/: assemblies.agc  samples_names.txt
Misc/: CondaSetup.sh  TODO_list.txt  phgtools_environment.yml
Modules/: CheckSetup.py  FastaFromKey.py  GenomeIntersectionFromMapKmers.py
Notebooks/: CheckHaplotypeAllelesInPangenome.ipynb  CheckImputatedHaplotype.ipynb  CoreRangeDetecter.ipynb  FastaFromKey.ipynb  GenomeIntersectionFromMapKmers.ipynb  PlotImputedHvcf.ipynb  PlotPangenomeChromosomes.ipynb  RangePangenomeEvolution.ipynb
src/phgtools/: cli.py
(+218 files in other folders)
