[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PHGv2Tools"
description = "Package to downstream analysis of pangenomes databases, working with Practical Haplotype Graph and its h.VCF files"
authors = [{ name = "Joan Sarria", email = "jsarria@eead.csic.es" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
dependencies = [
    "matplotlib>=3.0",
    "pandas>=1.0",
    "scipy>=1.0",
    "openpyxl>=3.0",
    "tqdm>=4.0",
    "numpy>=1.18",
    "rich",
    "seaborn>=0.11",
]
# dynamic must be part of the [project] table
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jsarriaa/PHGv2Tools"

# This declares the terminal command
[project.scripts]
phgtools = "phgtools.cli:main"

# This tells setuptools where to look for code
[tool.setuptools.packages.find]
where = ["src"]

# This tells setuptools how to find the version string
[tool.setuptools.dynamic]
version = {attr = "phgtools.__version__"}